--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -1,3 +1,7 @@
+<p class="text-center text-muted" *ngIf="!photos.length">
+  Sorry, no photos
+</p>
+
 <ol class="list-unstyled">
   <li *ngFor="let col of rows" class="row">
     <div class="col-4" *ngFor="let photo of photos">
@@ -6,6 +10,5 @@
       [description]="photo.description"
     ></gfotos-photo>
     </div>
-
   </li>
 </ol>
