--- a/src/app/photos/photo-list/load-button/load-button.component.html
+++ b/src/app/photos/photo-list/load-button/load-button.component.html
@@ -1,5 +1,7 @@
-<div class="text-center">
+<div class="text-center" *ngIf="hasMore; else noMore">
   <button class="btn btn-primary">Load More</button>
 </div>
 
-<p class="text-center text-muted">No more data to load</p>
+<ng-template #noMore>
+  <p class="text-center text-muted">No more data to load</p>
+</ng-template>
