--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,14 +1,5 @@
-<div class="text-center mt-3 mb-3">
-  <form>
-    <input
-      type="search"
-      class="rounded"
-      placeholder="search..."
-      autofocus
-      (keyup)="debounce.next($any($event.target).value)"
-    />
-  </form>
-</div>
+<gfotos-search (onTyping)="filter = $event" [value]="filter"></gfotos-search>
+
 <gfotos-photos [photos]="photos | filterByDescription: filter"></gfotos-photos>
 
 <gfotos-load-button (click)="load()" [hasMore]="hasMore"></gfotos-load-button>
