--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -1,14 +1,20 @@
-<p class="text-center text-muted" *ngIf="!photos.length">
-  Sorry, no photos
-</p>
+<p class="text-center text-muted" *ngIf="!photos.length">Sorry, no photos</p>
 
 <ol class="list-unstyled">
   <li *ngFor="let col of rows" class="row">
-    <div class="col-4" *ngFor="let photo of photos">
-      <gfotos-photo
-      [url]="photo.url"
-      [description]="photo.description"
-    ></gfotos-photo>
+    <div *ngFor="let photo of col" class="col-4">
+      <gfotos-card [title]="photo.description">
+        <gfotos-photo
+          class="g-0 row"
+          [url]="photo.url"
+          [description]="photo.description"
+        ></gfotos-photo>
+        <div class="text-center">
+          <i class="fa fa-heart-o fa-1x me-2">{{ photo.likes }}</i>
+          <i class="fa fa-comment-o fa-1x me-2 ms-2">{{ photo.comments }}</i>
+        </div>
+      </gfotos-card>
     </div>
   </li>
 </ol>
+
