--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,7 +3,7 @@
       <a class="navbar-brand">ALURAPIC</a>
       <div>
           <i class="fa fa-user-circle"></i>
-          <a> Aqui deve entrar o username</a>
+          <a class="ms-2 me-2 link-dark text-decoration-none"> {{user?.name}}</a>
       </div>
   </nav>
 </header>
