--- a/src/app/home/sigin/sigin.component.html
+++ b/src/app/home/sigin/sigin.component.html
@@ -39,4 +39,4 @@
   </button>
 </form>
 
-<p class="ms-4">Not a user? <a>Register now</a></p>
+<p class="ms-4">Not a user? <a [routerLink]="['signup']">Register now</a></p>
