23#commit(lazy load intercewptor)

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="ms-3 fixed-top">
   <nav class="navbar navbar-light bg-white">
-    <a class="navbar-brand">ALURAPIC</a>
+    <a class="navbar-brand">GERENCIAMENTO-FOTOS</a>
     <div *ngIf="user$ | async as user; else login">
       <i class="fa fa-user-circle"></i>
       <a class="ms-2 me-2 link-dark text-decoration-none"> {{ user?.name }}</a>
