--- a/src/app/photos/photo-form/photo-form.component.html
+++ b/src/app/photos/photo-form/photo-form.component.html
@@ -1,1 +1,51 @@
-<p>photo-form works!</p>
+<div class="container">
+  <form class="row" [formGroup]="photoForm" (submit)="upload()">
+    <div class="col-md-6 text-center">
+      <input formControlName="file" name="file" type="file" accept="image/*" />
+      <gfotos-message
+        *ngIf="photoForm.get('file')?.errors?.['required'] && photoForm.get('file')?.touched"
+        [message]="'Porfavor, escolha uma foto'"
+      ></gfotos-message>
+    </div>
+
+    <div class="col-md-6">
+      <div class="form-group">
+        <textarea
+          formControlName="description"
+          name="description"
+          class="form-control form-control-sm"
+          placeholder="Descrição"
+        ></textarea>
+        <gfotos-message
+        *ngIf="photoForm.get('description')?.errors?.['required'] && photoForm.get('description')?.touched"
+        [message]="'Descrição obrigatória'"
+      ></gfotos-message>
+      <gfotos-message
+        *ngIf="photoForm.get('description')?.errors?.['maxlength'] && photoForm.get('description')?.touched"
+        [message]="'Máximo de caracteres excedido'"
+      ></gfotos-message>
+      </div>
+
+      <div class="form-group">
+        <label class="text-muted mt-2">
+          Permitir comentários
+          <input
+            type="checkbox"
+            formControlName="allowComments"
+            name="allowComments"
+          />
+        </label>
+      </div>
+
+      <button
+        type="submit"
+        class="btn btn-primary col-12 mt-3"
+        [disabled]="!photoForm.valid"
+      >
+        Upload
+      </button>
+
+      <a class="mt-2 btn btn-secondary btn-block col-12">Cancel</a>
+    </div>
+  </form>
+</div>
